--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
