--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-moment": "^4.0.0",
